--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,8 @@ mybatis.type-aliases-package=kopo.poly.dto
 # SQL Query Location
 mybatis.mapper-locations=classpath:mapper/*.xml
 
-# DTO Mapping camel case
-mybatis.configuration.map-underscore-to-camel-case=true
+## DTO Mapping camel case
+#mybatis.configuration.map-underscore-to-camel-case=true
 
 ## JSP Location
 #spring.mvc.view.prefix=/WEB-INF/views/
